--- a/public/css/style.css
+++ b/public/css/style.css
@@ -301,7 +301,7 @@ p {
 ========================*/
 header {
   width: 100%;
-  background: #ff6801;
+  background: #ff6801 !important;
   padding: 19px 0px;
   height: 90px;
   border-bottom: 1px solid #fff;
@@ -640,7 +640,7 @@ header {
 .wsus__main_menu {
   width: 100%;
   height: 50px;
-  background: #0b2c3d;
+  background:#ff6801 ;
   background: #fff;
   box-shadow: rgb(100 100 111 / 20%) 0px 3px 15px 0;
 }
@@ -9450,3 +9450,6 @@ a:not([href]):not([class]):hover {
 }
 
 /* extra css end here */
+/* .rounded{
+  border-radius: 75px;
+} */
