--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9453,3 +9453,13 @@ a:not([href]):not([class]):hover {
 /* .rounded{
   border-radius: 75px;
 } */
+
+li.lang {
+  width: 82px;
+  margin-left: -9px;
+}
+
+li.lang .form-control{
+  background-color: #d33 !important;
+  color: #fff !important;
+}
